--- a/collections/ansible_collections/jaredhocutt/homelab/roles/immich/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/immich/vars/main.yml
@@ -8,75 +8,75 @@ immich_postgres_user: immich
 # Envrionment
 ###############################################################################
 
-immich_container_env_base:
+immich_container_env_defaults:
   DB_HOSTNAME: "{{ immich_name }}-postgres"
   REDIS_HOSTNAME: "{{ immich_name }}-redis"
 
-immich_machine_learning_container_env_base: {}
+immich_machine_learning_container_env_defaults: {}
 
-immich_postgres_container_env_base:
+immich_postgres_container_env_defaults:
   POSTGRES_INITDB_ARGS: --data-checksums
 
-immich_redis_container_env_base: {}
+immich_redis_container_env_defaults: {}
 
 immich_container_env_combined: >-
-  {{ common_container_env_base
-  | combine(immich_container_env_base, recursive=True)
+  {{ common_container_env_defaults
+  | combine(immich_container_env_defaults, recursive=True)
   | combine(immich_container_env, recursive=True) }}
 immich_machine_learning_container_env_combined: >-
-  {{ common_container_env_base
-  | combine(immich_machine_learning_container_env_base, recursive=True)
+  {{ common_container_env_defaults
+  | combine(immich_machine_learning_container_env_defaults, recursive=True)
   | combine(immich_machine_learning_container_env, recursive=True) }}
 immich_postgres_container_env_combined: >-
-  {{ common_container_env_base
-  | combine(immich_postgres_container_env_base, recursive=True)
+  {{ common_container_env_defaults
+  | combine(immich_postgres_container_env_defaults, recursive=True)
   | combine(immich_postgres_container_env, recursive=True) }}
 immich_redis_container_env_combined: >-
-  {{ common_container_env_base
-  | combine(immich_redis_container_env_base, recursive=True)
+  {{ common_container_env_defaults
+  | combine(immich_redis_container_env_defaults, recursive=True)
   | combine(immich_redis_container_env, recursive=True) }}
 
 ###############################################################################
 # Secrets
 ###############################################################################
 
-immich_secrets_base:
+immich_secrets_defaults:
   immich_postgres_db_name: "{{ immich_postgres_db_name }}"
   immich_postgres_user: "{{ immich_postgres_user }}"
   immich_postgres_password: "{{ immich_postgres_password }}"
 
 immich_secrets_combined: >-
-  {{ immich_secrets_base
+  {{ immich_secrets_defaults
   | combine(immich_secrets, recursive=True) }}
 
-immich_container_secrets_base:
+immich_container_secrets_defaults:
   - immich_postgres_db_name,type=env,target=DB_DATABASE_NAME
   - immich_postgres_user,type=env,target=DB_USERNAME
   - immich_postgres_password,type=env,target=DB_PASSWORD
 
-immich_machine_learning_container_secrets_base:
+immich_machine_learning_container_secrets_defaults:
   - immich_postgres_db_name,type=env,target=DB_DATABASE_NAME
   - immich_postgres_user,type=env,target=DB_USERNAME
   - immich_postgres_password,type=env,target=DB_PASSWORD
 
-immich_postgres_container_secrets_base:
+immich_postgres_container_secrets_defaults:
   - immich_postgres_db_name,type=env,target=POSTGRES_DB
   - immich_postgres_user,type=env,target=POSTGRES_USER
   - immich_postgres_password,type=env,target=POSTGRES_PASSWORD
 
-immich_redis_container_secrets_base: []
+immich_redis_container_secrets_defaults: []
 
 immich_container_secrets_combined: >-
-  {{ immich_container_secrets_base
+  {{ immich_container_secrets_defaults
   + immich_container_secrets }}
 immich_machine_learning_container_secrets_combined: >-
-  {{ immich_machine_learning_container_secrets_base
+  {{ immich_machine_learning_container_secrets_defaults
   + immich_machine_learning_container_secrets }}
 immich_postgres_container_secrets_combined: >-
-  {{ immich_postgres_container_secrets_base
+  {{ immich_postgres_container_secrets_defaults
   + immich_postgres_container_secrets }}
 immich_redis_container_secrets_combined: >-
-  {{ immich_redis_container_secrets_base
+  {{ immich_redis_container_secrets_defaults
   + immich_redis_container_secrets }}
 
 ###############################################################################
@@ -95,55 +95,55 @@ immich_container_labels_traefik:
     value: "{{ common_traefik_entrypoint }}"
   - key: traefik.http.services.{{ immich_name }}.loadbalancer.server.port
     value: "2283"
-immich_container_labels_base: "{{ immich_traefik_enable | ternary((immich_container_labels_traefik | items2dict), {}) }}"
+immich_container_labels_defaults: "{{ immich_traefik_enable | ternary((immich_container_labels_traefik | items2dict), {}) }}"
 
-immich_machine_learning_container_labels_base: {}
+immich_machine_learning_container_labels_defaults: {}
 
-immich_postgres_container_labels_base: {}
+immich_postgres_container_labels_defaults: {}
 
-immich_redis_container_labels_base: {}
+immich_redis_container_labels_defaults: {}
 
 immich_container_labels_combined: >-
-  {{ immich_container_labels_base
+  {{ immich_container_labels_defaults
   | combine(immich_container_labels, recursive=True) }}
 immich_machine_learning_container_labels_combined: >-
-  {{ immich_machine_learning_container_labels_base
+  {{ immich_machine_learning_container_labels_defaults
   | combine(immich_machine_learning_container_labels, recursive=True) }}
 immich_postgres_container_labels_combined: >-
-  {{ immich_postgres_container_labels_base
+  {{ immich_postgres_container_labels_defaults
   | combine(immich_postgres_container_labels, recursive=True) }}
 immich_redis_container_labels_combined: >-
-  {{ immich_redis_container_labels_base
+  {{ immich_redis_container_labels_defaults
   | combine(immich_redis_container_labels, recursive=True) }}
 
 ###############################################################################
 # Quadlet Options
 ###############################################################################
 
-immich_quadlet_options_base_custom:
+immich_quadlet_options_depends:
   - |
     [Unit]
     Requires={{ immich_name }}-postgres.service
     Requires={{ immich_name }}-redis.service
     After={{ immich_name }}-postgres.service
     After={{ immich_name }}-redis.service
-immich_quadlet_options_base: "{{ common_quadlet_options_base + immich_quadlet_options_base_custom }}"
+immich_quadlet_options_defaults: "{{ common_quadlet_options_defaults + immich_quadlet_options_depends }}"
 
-immich_machine_learning_quadlet_options_base: "{{ common_quadlet_options_base }}"
+immich_machine_learning_quadlet_options_defaults: "{{ common_quadlet_options_defaults }}"
 
-immich_postgres_quadlet_options_base: "{{ common_quadlet_options_base }}"
+immich_postgres_quadlet_options_defaults: "{{ common_quadlet_options_defaults }}"
 
-immich_redis_quadlet_options_base: "{{ common_quadlet_options_base }}"
+immich_redis_quadlet_options_defaults: "{{ common_quadlet_options_defaults }}"
 
 immich_quadlet_options_combined: >-
-  {{ immich_quadlet_options_base
+  {{ immich_quadlet_options_defaults
   + immich_quadlet_options }}
 immich_machine_learning_quadlet_options_combined: >-
-  {{ immich_machine_learning_quadlet_options_base
+  {{ immich_machine_learning_quadlet_options_defaults
   + immich_machine_learning_quadlet_options }}
 immich_postgres_quadlet_options_combined: >-
-  {{ immich_postgres_quadlet_options_base
+  {{ immich_postgres_quadlet_options_defaults
   + immich_postgres_quadlet_options }}
 immich_redis_quadlet_options_combined: >-
-  {{ immich_redis_quadlet_options_base
+  {{ immich_redis_quadlet_options_defaults
   + immich_redis_quadlet_options }}
