--- a/collections/ansible_collections/jaredhocutt/homelab/roles/radarr/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/radarr/vars/main.yml
@@ -5,27 +5,27 @@
 # Envrionment
 ###############################################################################
 
-radarr_container_env_base: {}
+radarr_container_env_defaults: {}
 
 radarr_container_env_combined: >-
-  {{ common_container_env_base
-  | combine(radarr_container_env_base, recursive=True)
+  {{ common_container_env_defaults
+  | combine(radarr_container_env_defaults, recursive=True)
   | combine(radarr_container_env, recursive=True) }}
 
 ###############################################################################
 # Secrets
 ###############################################################################
 
-radarr_secrets_base: {}
+radarr_secrets_defaults: {}
 
 radarr_secrets_combined: >-
-  {{ radarr_secrets_base
+  {{ radarr_secrets_defaults
   | combine(radarr_secrets, recursive=True) }}
 
-radarr_container_secrets_base: []
+radarr_container_secrets_defaults: []
 
 radarr_container_secrets_combined: >-
-  {{ radarr_container_secrets_base
+  {{ radarr_container_secrets_defaults
   + radarr_container_secrets }}
 
 ###############################################################################
@@ -44,18 +44,18 @@ radarr_container_labels_traefik:
     value: "{{ common_traefik_entrypoint }}"
   - key: traefik.http.services.{{ radarr_name }}.loadbalancer.server.port
     value: "7878"
-radarr_container_labels_base: "{{ radarr_traefik_enable | ternary((radarr_container_labels_traefik | items2dict), {}) }}"
+radarr_container_labels_defaults: "{{ radarr_traefik_enable | ternary((radarr_container_labels_traefik | items2dict), {}) }}"
 
 radarr_container_labels_combined: >-
-  {{ radarr_container_labels_base
+  {{ radarr_container_labels_defaults
   | combine(radarr_container_labels, recursive=True) }}
 
 ###############################################################################
 # Quadlet Options
 ###############################################################################
 
-radarr_quadlet_options_base: "{{ common_quadlet_options_base }}"
+radarr_quadlet_options_defaults: "{{ common_quadlet_options_defaults }}"
 
 radarr_quadlet_options_combined: >-
-  {{ radarr_quadlet_options_base
+  {{ radarr_quadlet_options_defaults
   + radarr_quadlet_options }}
