--- a/collections/ansible_collections/jaredhocutt/homelab/roles/sonarr/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/sonarr/vars/main.yml
@@ -5,27 +5,27 @@
 # Envrionment
 ###############################################################################
 
-sonarr_container_env_base: {}
+sonarr_container_env_defaults: {}
 
 sonarr_container_env_combined: >-
-  {{ common_container_env_base
-  | combine(sonarr_container_env_base, recursive=True)
+  {{ common_container_env_defaults
+  | combine(sonarr_container_env_defaults, recursive=True)
   | combine(sonarr_container_env, recursive=True) }}
 
 ###############################################################################
 # Secrets
 ###############################################################################
 
-sonarr_secrets_base: {}
+sonarr_secrets_defaults: {}
 
 sonarr_secrets_combined: >-
-  {{ sonarr_secrets_base
+  {{ sonarr_secrets_defaults
   | combine(sonarr_secrets, recursive=True) }}
 
-sonarr_container_secrets_base: []
+sonarr_container_secrets_defaults: []
 
 sonarr_container_secrets_combined: >-
-  {{ sonarr_container_secrets_base
+  {{ sonarr_container_secrets_defaults
   + sonarr_container_secrets }}
 
 ###############################################################################
@@ -44,18 +44,18 @@ sonarr_container_labels_traefik:
     value: "{{ common_traefik_entrypoint }}"
   - key: traefik.http.services.{{ sonarr_name }}.loadbalancer.server.port
     value: "8989"
-sonarr_container_labels_base: "{{ sonarr_traefik_enable | ternary((sonarr_container_labels_traefik | items2dict), {}) }}"
+sonarr_container_labels_defaults: "{{ sonarr_traefik_enable | ternary((sonarr_container_labels_traefik | items2dict), {}) }}"
 
 sonarr_container_labels_combined: >-
-  {{ sonarr_container_labels_base
+  {{ sonarr_container_labels_defaults
   | combine(sonarr_container_labels, recursive=True) }}
 
 ###############################################################################
 # Quadlet Options
 ###############################################################################
 
-sonarr_quadlet_options_base: "{{ common_quadlet_options_base }}"
+sonarr_quadlet_options_defaults: "{{ common_quadlet_options_defaults }}"
 
 sonarr_quadlet_options_combined: >-
-  {{ sonarr_quadlet_options_base
+  {{ sonarr_quadlet_options_defaults
   + sonarr_quadlet_options }}
