--- a/collections/ansible_collections/jaredhocutt/homelab/roles/wizarr/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/wizarr/vars/main.yml
@@ -5,27 +5,27 @@
 # Envrionment
 ###############################################################################
 
-wizarr_container_env_base: {}
+wizarr_container_env_defaults: {}
 
 wizarr_container_env_combined: >-
-  {{ common_container_env_base
-  | combine(wizarr_container_env_base, recursive=True)
+  {{ common_container_env_defaults
+  | combine(wizarr_container_env_defaults, recursive=True)
   | combine(wizarr_container_env, recursive=True) }}
 
 ###############################################################################
 # Secrets
 ###############################################################################
 
-wizarr_secrets_base: {}
+wizarr_secrets_defaults: {}
 
 wizarr_secrets_combined: >-
-  {{ wizarr_secrets_base
+  {{ wizarr_secrets_defaults
   | combine(wizarr_secrets, recursive=True) }}
 
-wizarr_container_secrets_base: []
+wizarr_container_secrets_defaults: []
 
 wizarr_container_secrets_combined: >-
-  {{ wizarr_container_secrets_base
+  {{ wizarr_container_secrets_defaults
   + wizarr_container_secrets }}
 
 ###############################################################################
@@ -44,18 +44,18 @@ wizarr_container_labels_traefik:
     value: "{{ common_traefik_entrypoint }}"
   - key: traefik.http.services.{{ wizarr_name }}.loadbalancer.server.port
     value: "5690"
-wizarr_container_labels_base: "{{ wizarr_traefik_enable | ternary((wizarr_container_labels_traefik | items2dict), {}) }}"
+wizarr_container_labels_defaults: "{{ wizarr_traefik_enable | ternary((wizarr_container_labels_traefik | items2dict), {}) }}"
 
 wizarr_container_labels_combined: >-
-  {{ wizarr_container_labels_base
+  {{ wizarr_container_labels_defaults
   | combine(wizarr_container_labels, recursive=True) }}
 
 ###############################################################################
 # Quadlet Options
 ###############################################################################
 
-wizarr_quadlet_options_base: "{{ common_quadlet_options_base }}"
+wizarr_quadlet_options_defaults: "{{ common_quadlet_options_defaults }}"
 
 wizarr_quadlet_options_combined: >-
-  {{ wizarr_quadlet_options_base
+  {{ wizarr_quadlet_options_defaults
   + wizarr_quadlet_options }}
